#
# Cak Nyut
#
[package]
name = "janu"
version = "0.6.0-dev"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@adlinktech.com>",
    "Luca Cominardi <luca.cominardi@adlinktech.com>",
    "Pierre Avital <pierre.avital@adlinktech.com>",
]

edition = "2018"
maintainer = "ADLINK janu team, <janu@adlink-labs.tech>"

[lib]
name = "janu"
crate-type = ["cdylib"]

[features]
complete_n = ["janu/complete_n"]

[dependencies]
janu = { git = "https://github.com/virtuehive/janu" }
janu-util = { git = "https://github.com/virtuehive/janu" }
validated_struct = "0.1"
json5 = "0.4.1"
serde_json = "1.0"
async-std = "=1.9.0"
uhlc = "0.4.0"
futures = "0.3.12"
log = "0.4"
env_logger = "0.9.0"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module", "abi3-py36"]
